--- a/apps/static/assets/css/style.css
+++ b/apps/static/assets/css/style.css
@@ -1516,10 +1516,11 @@ p.text-muted {
           align-items: center;
 }
 .b-brand .b-bg {
-  background: linear-gradient(-135deg, #1de9b6 0%, #1dc4e9 100%);
+  background: linear-gradient(-135deg, #0061d5 0%, #0061d5 100%);
   border-radius: 10px;
-  width: 35px;
+  /* width: 35px; */
   height: 35px;
+  padding: 10px;
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
