basic login with box page

--- a/apps/templates/accounts/login.html
+++ b/apps/templates/accounts/login.html
@@ -55,11 +55,11 @@
                     <p class="mb-0 text-muted">Don’t have an account? <a href="{{ url_for('authentication_blueprint.register') }}" >Sign UP</a></p>
                     
                     <br />
-                    <p class="mb-2 text-muted">
+                    <!-- <p class="mb-2 text-muted">
                         &copy; <a target="_blank" href="https://bit.ly/37fF9RT">CodedThemes</a> 
                         - <a target="_blank" 
                              href="https://appseed.us/product/datta-able/flask/">Flask Datta Able</a>.
-                    </p>
+                    </p> -->
                 </div>
             </div>
         </div>
