--- a/apps/templates/includes/navigation.html
+++ b/apps/templates/includes/navigation.html
@@ -121,8 +121,8 @@
                     </a>
                     <div class="dropdown-menu dropdown-menu-right profile-notification">
                         <div class="pro-head">
-                            <img src="{{ config.ASSETS_ROOT }}/images/user/avatar-1.jpg" class="img-radius"
-                                alt="User-Profile-Image">
+                            <!-- <img src="{{ config.ASSETS_ROOT }}/images/user/avatar-1.jpg" class="img-radius" alt="User-Profile-Image"> -->
+                            <img src="{{avatar_url}}" class="img-radius" alt="User-Profile-Image">
                             <span>
                                 {{ current_user.username }}
                             </span>
