--- a/apps/templates/includes/navigation.html
+++ b/apps/templates/includes/navigation.html
@@ -59,7 +59,7 @@
                 <div class="dropdown">
                     <a class="dropdown-toggle" href="javascript:" data-toggle="dropdown"><i
                             class="icon feather icon-bell"></i></a>
-                    <div class="dropdown-menu dropdown-menu-right notification">
+                    <div class="dropdown-menu dropdown-menu-right p-notification">
                         <div class="noti-head">
                             <h6 class="d-inline-block m-b-0">Notifications</h6>
                             <div class="float-right">
@@ -71,7 +71,7 @@
                             <li class="n-title">
                                 <p class="m-b-0">NEW</p>
                             </li>
-                            <li class="notification">
+                            <li class="p-notification">
                                 <div class="media">
                                     <img class="img-radius" src="{{ config.ASSETS_ROOT }}/images/user/avatar-1.jpg"
                                         alt="Generic placeholder image">
@@ -85,7 +85,7 @@
                             <li class="n-title">
                                 <p class="m-b-0">EARLIER</p>
                             </li>
-                            <li class="notification">
+                            <li class="p-notification">
                                 <div class="media">
                                     <img class="img-radius" src="{{ config.ASSETS_ROOT }}/images/user/avatar-2.jpg"
                                         alt="Generic placeholder image">
@@ -96,7 +96,7 @@
                                     </div>
                                 </div>
                             </li>
-                            <li class="notification">
+                            <li class="p-notification">
                                 <div class="media">
                                     <img class="img-radius" src="{{ config.ASSETS_ROOT }}/images/user/avatar-3.jpg"
                                         alt="Generic placeholder image">
