--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -21,7 +21,7 @@
         </div>
         <div class="navbar-content scroll-div">
             <ul class="nav pcoded-inner-navbar">
-                <li class="nav-item pcoded-menu-caption">
+                <!-- <li class="nav-item pcoded-menu-caption">
                     <label>User</label>
                 </li>
                 <li data-username="Profile Page" 
@@ -29,7 +29,7 @@
                     <a href="/profile.html" class="nav-link">
                         <span class="pcoded-micon"><i class="feather icon-user"></i></span>
                             <span class="pcoded-mtext">Profile</span></a>
-                </li>
+                </li> -->
                 <li class="nav-item pcoded-menu-caption">
                     <label>UI Elements</label>
                 </li>
