--- a/apps/templates/includes/navigation.html
+++ b/apps/templates/includes/navigation.html
@@ -23,7 +23,7 @@
         <i class="feather icon-more-horizontal"></i>
     </a>
     <div class="collapse navbar-collapse">
-        <ul class="navbar-nav mr-auto">
+        <!-- <ul class="navbar-nav mr-auto">
             <li><a href="javascript:" class="full-screen" onclick="javascript:toggleFullScreen()"><i
                         class="feather icon-maximize"></i></a></li>
             <li class="nav-item dropdown">
@@ -47,7 +47,7 @@
                     </div>
                 </div>
             </li>
-        </ul>
+        </ul> -->
         <ul class="navbar-nav ml-auto">
             <li>
                 <label>
@@ -55,7 +55,7 @@
                     <input type="checkbox" id="theme-switch" class="d-none">
                 </label>
             </li>
-            <li>
+            <!-- <li>
                 <div class="dropdown">
                     <a class="dropdown-toggle" href="javascript:" data-toggle="dropdown"><i
                             class="icon feather icon-bell"></i></a>
@@ -113,7 +113,7 @@
                         </div>
                     </div>
                 </div>
-            </li>
+            </li> -->
             <li>
                 <div class="dropdown drp-user">
                     <a href="javascript:" class="dropdown-toggle" data-toggle="dropdown">
@@ -131,10 +131,10 @@
                             </a>
                         </div>
                         <ul class="pro-body">
-                            <li><a href="/profile.html" class="dropdown-item"><i class="feather icon-settings"></i>
+                            <!-- <li><a href="/profile.html" class="dropdown-item"><i class="feather icon-settings"></i>
                                     Settings</a></li>
                             <li><a href="/profile.html" class="dropdown-item"><i class="feather icon-user"></i>
-                                    Profile</a></li>
+                                    Profile</a></li> -->
                             <li><a href="{{ url_for('authentication_blueprint.logout') }}" class="dropdown-item">
                                     <i class="feather icon-lock"></i> Logout</a>
                             </li>
