fixed text on authorize button, updated requirements

--- a/apps/templates/accounts/login-box.html
+++ b/apps/templates/accounts/login-box.html
@@ -31,7 +31,7 @@
                 </div>
 
                 <button type="button" class="btn btn-primary" data-toggle="tooltip"
-                    onclick="window.location='{{auth_url}}'">Login with box.com</button>
+                    onclick="window.location='{{auth_url}}'">Authorize this app on Box.com</button>
                 <br />
                 <span class="mb-0 text-muted">
                     {% if msg %}
