--- a/apps/templates/includes/navigation.html
+++ b/apps/templates/includes/navigation.html
@@ -135,7 +135,12 @@
                                     Settings</a></li>
                             <li><a href="/profile.html" class="dropdown-item"><i class="feather icon-user"></i>
                                     Profile</a></li> -->
-                            <li><a href="{{ url_for('authentication_blueprint.logout') }}" class="dropdown-item">
+                            <li>
+                                <a href="{{ url_for('authentication_blueprint.init_demo') }}" class="dropdown-item">
+                                    <i class="feather icon-upload"></i> Upload demo files</a>
+                            </li>
+                            <li>
+                                <a href="{{ url_for('authentication_blueprint.logout') }}" class="dropdown-item">
                                     <i class="feather icon-lock"></i> Logout</a>
                             </li>
                         </ul>
