adjusting demo initialization

--- a/apps/templates/accounts/login-box.html
+++ b/apps/templates/accounts/login-box.html
@@ -40,7 +40,7 @@
                 </span>
                 <br />
 
-                <p class="mb-0 text-muted">Don’t have an account? <a
+                <p class="mb-0 text-muted">Don’t have a Box.com account? <a
                         href="https://account.box.com/signup/personal?tc=annual" target="_blank;">Sign UP</a></p>
 
                 <br />
