--- a/apps/templates/includes/navigation.html
+++ b/apps/templates/includes/navigation.html
@@ -137,7 +137,7 @@
                                     Profile</a></li> -->
                             <li>
                                 <a href="{{ url_for('authentication_blueprint.init_demo') }}" class="dropdown-item">
-                                    <i class="feather icon-upload"></i> Upload demo files</a>
+                                    <i class="feather icon-upload"></i> Initialize demo</a>
                             </li>
                             <li>
                                 <a href="{{ url_for('authentication_blueprint.logout') }}" class="dropdown-item">
