adjusted link to default route in header

--- a/apps/templates/includes/navigation.html
+++ b/apps/templates/includes/navigation.html
@@ -2,7 +2,7 @@
 <header class="navbar pcoded-header navbar-expand-lg navbar-light">
     <div class="m-header">
         <a class="mobile-menu" id="mobile-collapse1" href="javascript:"><span></span></a>
-        <a href="/" class="b-brand">
+        <a href="{{ url_for('authentication_blueprint.route_default') }}" class="b-brand">
             <div class="b-bg">
                 <!-- <i class="feather icon-trending-up"></i> -->
                 <!-- <svg width='175.696' viewBox='0 0 219.62 29.42'></svg> -->
